--- a/commonlibrary/src/main/res/layout/dialog_update_app.xml
+++ b/commonlibrary/src/main/res/layout/dialog_update_app.xml
@@ -16,18 +16,15 @@
             android:layout_height="450dp"
             android:orientation="vertical"
             android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:background="@drawable/icon_update_app">
+            android:layout_marginRight="32dp">
 
 
-            <com.easy.library.view.widget.RadiusTextView
+            <TextView
                 android:id="@+id/updateSure"
                 android:layout_width="0dp"
-                app:rv_radius="6dp"
                 android:layout_height="44dp"
                 android:gravity="center"
-                android:textColor="@color/white"
-                app:rv_backgroundColor="@color/app_color"
+                android:textColor="#ffffff"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +42,7 @@
                 android:text="发现新版本"
                 android:textSize="16sp"
                 android:layout_marginBottom="60dp"
-                android:textColor="@color/app_color"/>
+                android:textColor="#000000"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,7 +50,6 @@
             android:id="@+id/updateCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_update_app_close"
             android:layout_gravity="center_horizontal"
             android:padding="32dp"/>
 
